Added styling, linking, and more content.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html>
     <head>
         <title>Home</title>
+        <link rel="stylesheet"
+             type="text/css"
+             href="style.css" />
     </head>
 
     <body>
-
-    </body>
+        <header>
+            Welcome to the Super Ellipse Drawer 5000!
+        </header>
+        <div class="image_container">
+            <img class="center rounded-corners" src="images/nebula.jpg" width="600" height="400"/> 
+            <div class="centered_text"><h1 style="color:#FFFFFF">Super Ellipse Drawer 5000</h1></div>
+        </div>
+        <div class="sidebar_left">
+            <p>
+                <a href="GetForm.html">Draw your own ellipse!</a>
+            </p>
+        </div>
 </html>
