--- a/index.html
+++ b/index.html
@@ -11,13 +11,26 @@
         <header>
             Welcome to the Super Ellipse Drawer 5000!
         </header>
-        <div class="image_container">
-            <img class="center rounded-corners" src="images/nebula.jpg" width="600" height="400"/> 
-            <div class="centered_text"><h1 style="color:#FFFFFF">Super Ellipse Drawer 5000</h1></div>
+        <div id="container">
+            <div class="sidebar_left">
+                <ul>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="GetForm.html">Ellipse Builder</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="image_container">
+                <img class="center rounded-corners" src="images/nebula.jpg" width="600" height="250"/> 
+                <div class="centered_text"><h1 style="color:#FFFFFF">Super Ellipse Drawer 5000</h1></div>
+                <p id="instructions">
+                    Welcome to Super Ellipse Drawer 5000! 
+                    The best ellipse builder on the internet. 
+                    Click on "Ellipse Builder" in the navigation to draw your own ellipse.
+                </p>
+            </div>
         </div>
-        <div class="sidebar_left">
-            <p>
-                <a href="GetForm.html">Draw your own ellipse!</a>
-            </p>
-        </div>
+        <footer>Kyle Mayer | Program 2: Ellipse Generator | kmayer1@cnm.edu</footer>
 </html>
