--- a/index.html
+++ b/index.html
@@ -11,20 +11,37 @@
         <header>
             Welcome to the Super Ellipse Drawer 5000!
         </header>
-        <div id="container">
-            <div class="sidebar_left">
+
+        <nav>
+            <div>
                 <ul>
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="index.html" class="active">Home</a>
                     </li>
                     <li>
                         <a href="GetForm.html">Ellipse Builder</a>
                     </li>
                 </ul>
             </div>
-            <div class="image_container">
-                <img class="center rounded-corners" src="images/nebula.jpg" width="600" height="250"/> 
-                <div class="centered_text"><h1 style="color:#FFFFFF">Super Ellipse Drawer 5000</h1></div>
+        </nav>
+        <div id="container">
+           <div class="sidebar_left">
+                <p style="font-size: 18px; color:#FFFFFF; font-weight: bold;">Information about ellipses:</p>
+                <p>
+                    <a href="https://en.wikipedia.org/wiki/Ellipse" target="_blank">Wikipedia</a>
+                </p>
+                <p>
+                    <a href="https://www.mathwarehouse.com/ellipse/equation-of-ellipse.php" target="_blank">Ellipse formula</a>
+                </p>
+                <p>
+                    <a href="https://www.khanacademy.org/math/precalculus/x9e81a4f98389efdf:conics/x9e81a4f98389efdf:ellipse-center-radii/v/ellipse-standard-equation-from-graph" target="_blank">
+                        Khan Academy
+                    </a>
+                </p>
+           </div> 
+            <div class="box">
+                <img class="center rounded-corners" src="images/nebula.jpg" width="600" height="300"/> 
+                <div class="box_text"><h1 style="color:#FFFFFF">Super Ellipse Drawer 5000</h1></div>
                 <p id="instructions">
                     Welcome to Super Ellipse Drawer 5000! 
                     The best ellipse builder on the internet. 
