--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
         </nav>
         <div id="container">
-           <div class="sidebar_left">
+           <div class="sidebar_left" style="background: #333333;">
                 <p style="font-size: 18px; color:#FFFFFF; font-weight: bold;">Information about ellipses:</p>
                 <p>
                     <a href="https://en.wikipedia.org/wiki/Ellipse" target="_blank">Wikipedia</a>
@@ -41,7 +41,7 @@
            </div> 
             <div class="box">
                 <img class="center rounded-corners" src="images/nebula.jpg" width="600" height="300"/> 
-                <div class="box_text"><h1 style="color:#FFFFFF">Super Ellipse Drawer 5000</h1></div>
+                <div class="box_text"><h2 style="color:#FFFFFF">Welcome!</h2></div>
                 <p id="instructions">
                     Welcome to Super Ellipse Drawer 5000! 
                     The best ellipse builder on the internet. 
