--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </a>
                 </p>
            </div> 
-            <div class="box">
+            <div class="box" id="main_content">
                 <img class="center rounded-corners" src="images/nebula.jpg" width="600" height="300"/> 
                 <div class="box_text"><h2 style="color:#FFFFFF">Welcome!</h2></div>
                 <p id="instructions">
