--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
         </nav>
         <div id="container">
-           <div class="sidebar_left" style="background: #333333;">
+           <div  style="background: #333333;">
                 <p style="font-size: 18px; color:#FFFFFF; font-weight: bold;">Information about ellipses:</p>
                 <p>
                     <a href="https://en.wikipedia.org/wiki/Ellipse" target="_blank">Wikipedia</a>
@@ -39,6 +39,7 @@
                     </a>
                 </p>
            </div> 
+
             <div class="box" id="main_content">
                 <img class="center rounded-corners" src="images/nebula.jpg" width="600" height="300"/> 
                 <div class="box_text"><h2 style="color:#FFFFFF">Welcome!</h2></div>
@@ -47,6 +48,10 @@
                     The best ellipse builder on the internet. 
                     Click on "Ellipse Builder" in the navigation to draw your own ellipse.
                 </p>
+                <p>For more information on the mathematics involved with ellipses, visit the links in the side bar.</p>
+            </div>
+            <div>
+                    <img src="images/satellite.jpg" height="150" width="250" class="rounded-corners" />
             </div>
         </div>
         <footer>Kyle Mayer | Program 2: Ellipse Generator | kmayer1@cnm.edu</footer>
