Fixed comments and some code formatting

--- a/GetForm.html
+++ b/GetForm.html
@@ -1,10 +1,17 @@
+<!--
+Name:       Kyle Mayer
+File:       GetForm.html
+Program:    Program 2
+Purpose:    Design a web page that can pass parameters between html pages to draw an ellipse
+Date:       9/15/2019
+-->
+
 <!DOCTYPE html>
 <html>
     <head>
         <link rel="stylesheet"
              type="text/css"
              href="style.css" />
-
         <style>
             label {
                 padding: 5px 10px 5px 10px;
@@ -31,14 +38,12 @@
                 border-radius: 25px;
                 background: #212121;
             }
-
         </style>
         <title>Ellipse Parameters</title>
     </head>
 
     <body>
         <header>Ellipse Builder</header>
-
         <nav>
             <div>
                 <ul>
