--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!--
+Name:       Kyle Mayer
+File:       GetForm.html
+Program:    Program 2
+Purpose:    Design a web page that can pass parameters between html pages to draw an ellipse
+Date:       9/15/2019
+-->
+
 <!DOCTYPE html>
 <html>
     <head>
